--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </div>
           <div class="contact">
             <div class="contact-buttons">
-              <button>Contact</button>
-              <button>Download CV</button>
+              <button onclick="location.href='#contact'">Contact</button>
+              <button onclick="window.open('./Assets/Images/Web Development CV.pdf')">Download CV</button>
             </div>
             <div id="socials">
               <a href="https://github.com/MagikMaik" target="_blank"><i class="fa-brands fa-github"></i></a>
