added pokemon button page

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <p>Gotta Catch'em All!</p>
             <div class="links-projects">
               <button onclick="location.href='https://github.com/MagikMaik/pokedex/'" target="_blank">Github</button>
+              <button  target="_blank" onclick="location.href='https://magikmaik.github.io/pokedex/'">Go to page</button>
             </div>
           </div>
         </div>
