--- a/index.html
+++ b/index.html
@@ -48,13 +48,20 @@
       <div class="card">
         <div id="about">
           <h1>About me</h1>
-          <div id="education">
-            <h2>Education</h2>
-            <h3>Le Wagon</h3>
-            <p>400+hours Web Developement Bootcamp</p>
+          <div class="about-container">
+           
+            <div class="education">
+              <p> Recent Web Developer looking for a change, eager to enter the world of Tech and develop my skills even further and become a full-stack developer.
+                With a background in the field of Architecture, I obtained various skills that made me a professional but made me realise that I wanted a change in the path I was taking for life.
+              </p>
+              <h2>Education</h2>
+              <h3>Le Wagon</h3>
+              <p>
+                <strong>400+ hours</strong> of web development program that consisted of learning programming  basics using different frameworks and programs such as <strong>Ruby on Rails, HTML, CSS, Javascript and teamwork environments like Github.</strong>
+              </p>
+
+            </div>
           </div>
-          <p>In the past, I worked as an Architect for 5 years in several architecture firms in Panama. Today I am studying to enter the world of Tech and become a Web Developer. I aspire to become a Full Stack Developer specializing in Front-end Development.
-          </p>
         </div>
       </div>
       <div id="experience" class="card experience">
