--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
           </div>
           <div class="languages">
             <img src="./Assets/Images/rails.png" alt="">
-            <p>basic level</p>
+            <p>intermediate level</p>
           </div>
           <div class="languages">
             <img src="./Assets/Images/react.png" alt="">
-            <p>basic level</p>
+            <p>intermediate level</p>
           </div>
         </div>
       </div>
