--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
           <div class="about-container">
             <div class="education">
               <p>
-                Recent Web Developer looking for a change, eager to enter the
-                world of Tech and develop my skills even further and become a
-                full-stack developer. With a background in the field of
+                Web Developer with a nack. With a background in the field of
                 Architecture, I obtained various skills that made me a
                 professional but made me realise that I wanted a change in the
                 path I was taking for life.
@@ -104,7 +102,7 @@
           </div>
           <div class="languages">
             <img src="./Assets/Images/js.png" alt="" />
-            <p>basic level</p>
+            <p>intermediate level</p>
           </div>
           <div class="languages">
             <img src="./Assets/Images/rails.png" alt="" />
@@ -114,12 +112,73 @@
             <img src="./Assets/Images/react.png" alt="" />
             <p>intermediate level</p>
           </div>
+          <div class="languages">
+            <img src="./Assets/Images/typescript.png" alt="" />
+            <p>basic level</p>
+          </div>
         </div>
       </div>
 
       <div class="card projects" id="projects">
         <h1>Projects</h1>
         <div class="project-display">
+          <div class="project">
+            <h3>Trekbag</h3>
+            <img src="./Assets/Images/Trekbag.jpeg" alt="" />
+            <p>Don't forget to pack</p>
+            <div class="links-projects">
+              <button
+                onclick="location.href='https://github.com/MagikMaik/trekbag/'"
+                target="_blank"
+              >
+                Github
+              </button>
+              <button
+                target="_blank"
+                onclick="location.href='https://magikmaik.github.io/trekbag/'"
+              >
+                Go to page
+              </button>
+            </div>
+          </div>
+          <div class="project">
+            <h3>Word Analytics</h3>
+            <img src="./Assets/Images/Char.jpg" alt="" />
+            <p>Every character counts</p>
+            <div class="links-projects">
+              <button
+                onclick="location.href='https://github.com/MagikMaik/trekbag/'"
+                target="_blank"
+              >
+                Github
+              </button>
+              <button
+                target="_blank"
+                onclick="location.href='https://magikmaik.github.io/trekbag/'"
+              >
+                Go to page
+              </button>
+            </div>
+          </div>
+          <div class="project">
+            <h3>CorpComment</h3>
+            <img src="./Assets/Images/hashtag.jpg" alt="" />
+            <p>Give feedback of any company</p>
+            <div class="links-projects">
+              <button
+                onclick="location.href='https://github.com/MagikMaik/corpcomment'"
+                target="_blank"
+              >
+                Github
+              </button>
+              <button
+                target="_blank"
+                onclick="location.href='https://magikmaik.github.io/trekbag/'"
+              >
+                Go to page
+              </button>
+            </div>
+          </div>
           <div class="project">
             <h3>Buddfit Challenge</h3>
             <img src="./Assets/Images/Budfit.png" alt="" />
@@ -170,6 +229,7 @@
               </button>
             </div>
           </div>
+          
         </div>
       </div>
       <div class="card contact" id="contact">
