--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               </button>
               <button
                 target="_blank"
-                onclick="location.href='https://magikmaik.github.io/trekbag/'"
+                onclick="location.href='https://magikmaik.github.io/corpcomment/'"
               >
                 Go to page
               </button>
@@ -229,7 +229,6 @@
               </button>
             </div>
           </div>
-          
         </div>
       </div>
       <div class="card contact" id="contact">
