--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
           <div class="about-container">
             <div class="education">
               <p>
-                Web Developer with a nack. With a background in the field of
-                Architecture, I obtained various skills that made me a
-                professional but made me realise that I wanted a change in the
-                path I was taking for life.
+                Web Developer from Panama with a desire to build awesome apps. I
+                have a background in the field of Architecture, which gave me
+                the tools to work in a team environment and to solve problems in
+                a creative way. I am a fast learner and I am always looking for
+                new challenges. During my free time i like gaming and watching
+                thriller movies.
               </p>
               <h2>Education</h2>
               <h3>Le Wagon</h3>
